# Mawster

./: .ai-context.md  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .server-runner-state.json  CLAUDE.md  Caddyfile  DEPLOY.md  IMPLEMENTATION_REPORT.md  Makefile  README.md  SECURITY_AUDIT.md  SECURITY_AUDIT_V2.md  TODO.md  compose-db-access.yaml  compose-dev.yaml  compose-prod.yaml  compose.db-access.yaml  compose.prod.yaml  compose.yaml  db.env.example  generate_env.py  package-lock.json  package.json  ruff.toml  skills-lock.json  sonar-project.properties  stack-app-dev.env.example  stack-app-dev.yaml  stack-app-staging.yaml  stack-app.yaml  stack-obs.yaml  todo
api/: .coveragerc  Makefile  Pipfile.legacy  alembic.ini  api.Dockerfile  api.env.example  app_debugger.py  app_testing.py  cmds  main.py  migrate.Dockerfile  migrate.sh  pyproject.toml  requirements_dev.txt  run.sh
api/.claude/: settings.local.json
api/docs/: diag_class.puml  mdc.puml  mld.puml
api/fixtures/: champions.py
api/migrations/: env.py
api/migrations/versions/: 002387460f60_add_vision_import_tables.py  06033433e335_vision_sample_bucket_only_json.py  08e07b56f4a1_add_synergies.py  0c439ddb6a65_add_assists.py  0cc33c59d17e_add_fight_completed.py  16a29ff0a03a_init.py  178b878847d9_add_elo_and_tier.py  178b878847d9_init.py  1a4847d6b57d_war_fight_note_and_revision.py  1ecfcebd30c1_add_vision_prediction_candidate_table.py  1f2745b9d082_war_fight_note_with_moderation.py  26f1feb0c934_add_big_thing_war.py  27f067e9cc5a_add_saga.py  2909d04185d8_note_report_user_mute_user_warn.py  2b66dc5bf643_add_war_and_war_defense_placement.py  2d239a911782_init.py  491061423fd5_war_fight_note_with_moderation.py  56c7c789dfe7_init.py  593c3eb26523_add_prefights.py  59cb9b765093_add_status_to_war.py  5bf7d1462a3a_init.py  5cfbb1d36027_fix_not_unique_prefights.py  5e7dadb0ba03_saga_per_season.py  6366528b2ae2_add_mastery.py  6366528b2ae2_init.py  640fa6c40699_init.py  83a2e5379297_vision_sample_and_confirmed_status.py  83f2948ec962_season_status.py  845077a610bf_add_snapshotted_at_to_war.py  87f64bfcb771_destructive_reinit_db.py  8ab9a3f84ff8_add_big_thing_season.py  8be10426cec1_war_fight_note_placement_fk_set_null.py  94d7d9280a40_add_war_fight_record_import_table.py  9566c7a3f06d_init.py  98888a52433b_add_vision_infra.py  9c16af546b4b_init.py  a08a2f9b992c_add_assisted_to_war_fight_record.py  a1b2c3d4e5f6_add_ascension_fields.py  a1b2c3d4e5f6_war_synergy_attacker.py  a305c37823c5_add_champion_has_prefight.py  (+25 more)
api/scripts/: champions.json  champions_to_load.json  defense_E33_bg1_2026-03-03.json  gen_champion_capabilities.py  masteries.json  roster_Mr_DrBalise.json  roster_Mr_DrBalise_2026-02-25.json  roster_Mr_DrBalise_2026-02-28.json  scrape_champions.py
api/src/Messages/: alliance_messages.py  champion_messages.py  champion_user_messages.py  defense_messages.py  discord_auth_messages.py  game_account_messages.py  google_auth_messages.py  invitation_messages.py  jwt_messages.py  mastery_messages.py  matchup_messages.py  season_messages.py  upgrade_request_messages.py  user_messages.py  validators_messages.py  vision_messages.py  visitor_messages.py  war_messages.py
api/src/controllers/: __init__.py  admin_controller.py  alliance_controller.py  auth_controller.py  champion_controller.py  champion_user_controller.py  defense_controller.py  dev_controller.py  fight_record_controller.py  game_account_controller.py  game_controller.py  season_controller.py  statistic_controller.py  stats_controller.py  user_controller.py  war_controller.py
api/src/dto/: dto_alliance.py  dto_champion.py  dto_champion_user.py  dto_defense.py  dto_fight_record.py  dto_game.py  dto_game_account.py  dto_invitation.py  dto_mastery.py  dto_season.py  dto_statistic.py  dto_stats.py  dto_token.py  dto_upgrade_request.py  dto_utilisateurs.py  dto_war.py
api/src/enums/: AuthProvider.py  ChampionClass.py  ChampionRarity.py  FightRecordSource.py  InvitationStatus.py  InvitationType.py  MatchupTargetType.py  MatchupVerdict.py  NoteReportStatus.py  Roles.py  SeasonFormat.py  SeasonSelectorType.py  SeasonStatus.py  Token.py
api/src/fixtures/: __init__.py  champions.json  champions_2026-04-26.json  champions_capabilities.json  delete_db.py  first_init_prod.py  history.csv  load_champions.py  load_masteries.py  masteries.json  reset_db.py  sample_data.py
api/src/messaging/: __init__.py  consumer.py  publisher.py  topology.py
api/src/models/: Alliance.py  AllianceAdjoint.py  AllianceInvitation.py  AllianceOfficer.py  AllianceVisitor.py  AppConfig.py  Base.py  Champion.py  ChampionSagaRole.py  ChampionUser.py  DefensePlacement.py  GameAccount.py  GameAccountMastery.py  LoginLog.py  Mastery.py  MatchupRating.py  MatchupSynergy.py  NoteReport.py  RequestedUpgrade.py  Season.py  User.py  UserMute.py  UserWarn.py  VisionImport.py  VisionJob.py  VisionPrediction.py  VisionPredictionCandidate.py  VisionSample.py  War.py  WarBan.py  WarDefensePlacement.py  WarFightNote.py  WarFightNoteRevision.py  WarFightPrefight.py  WarFightRecord.py  WarFightRecordImport.py  WarFightSynergy.py  WarPrefightAttacker.py  WarSynergyAttacker.py  __init__.py
api/src/security/: __init__.py  secrets.py
api/src/services/: AllianceInvitationService.py  AllianceService.py  AllianceVisitorService.py  AuthService.py  ChampionService.py  ChampionUserService.py  DefensePlacementService.py  DiscordAuthService.py  FightRecordService.py  (+13 more)
api/tests/: conftest.py  run_sh_env_test.sh
fake-worker/: Dockerfile  main.py  pyproject.toml
(+870 files in other folders)
