[project]
name = "mawster-api"
version = "0.1.0"
description = "Mawster API - MCOC Alliance Management"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pyjwt",
    "python-multipart",
    "pydantic-settings",
    "sqlmodel",
    "aiomysql",
    "nh3",
    "sentry-sdk",
    "slowapi",
    "prometheus-fastapi-instrumentator",
    "aio-pika",
    "aioboto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "migrations/*", "scripts/*"]
concurrency = ["greenlet", "thread"]

[tool.ruff]
# Rules, formatter settings and ignores live in the repo-wide ruff.toml so that the
# hook, the CLI and CI can never disagree. Only api-specific overrides belong here.
extend = "../ruff.toml"

[tool.ruff.lint.per-file-ignores]
# Local DB scripts: the retry loops must swallow *any* driver/ORM error and try again,
# which is the point — they run against a database that may not be up yet.
"src/fixtures/*_db.py" = ["BLE001"]
# Pydantic field validators must raise ValueError: it is the only exception Pydantic
# turns into a 422. A TypeError (what TRY004 asks for) escapes as a 500 instead.
"src/validators/*.py" = ["TRY004"]

[dependency-groups]
migrate = [
    "alembic",
    "pymysql",
    "sqlmodel",
]
dev = [
    "aiosqlite>=0.22.1",
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.0.0",
    "vulture>=2.16",
    "faker>=24.0.0",
    "time-machine>=2.0.0",
]
