[project]
name = "fake-vision-worker"
version = "0.1.0"
description = "Model-free fake vision worker for E2E — exercises the vision.jobs/vision.results wiring without the real worker's ML models."
requires-python = ">=3.12"
dependencies = [
    "aio-pika",
    "aioboto3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
