[project]
name = "fake-vision-worker"
version = "0.1.0"
description = "Model-free fake vision worker for E2E — exercises the vision.jobs/vision.results wiring without the real worker's ML models."
requires-python = ">=3.12"
dependencies = [
    "aio-pika",
    "aioboto3",
]

[tool.uv]
package = false

[tool.ruff]
# See the repo-wide ruff.toml — rules and formatter settings are defined once there.
extend = "../ruff.toml"
